# deployment_test

./: NYC Taxi Trip Analytics.lvdash.json
.github/workflows/: dabs-validation.yml  deploy.yml
DLT_Incremental_Refresh_V2/: README.md  databricks.yml  requirements-dev.txt  requirements.txt  setup.py
DLT_Incremental_Refresh_V2/resources/: dashboard.yml  job.yml  pipeline.yml
DLT_Incremental_Refresh_V2/src/: alpha_vantage_pipeline.ipynb  dlt_pipeline.ipynb  event_log_creation.ipynb  generate_random_data.ipynb  mv_refresh_dashboard.lvdash.json
DLT_Incremental_Refresh_V2/tests/: main_test.py
custom_job_alerts/: README.md
custom_job_alerts/resources/: jobs.yml
custom_job_alerts/src/: notification_webhook_failure.ipynb  notification_webhook_success.ipynb
custom_libraries/: databricks.yml
custom_libraries/utils/helpers/: __init__.py  pyproject.toml
dabs_demo/: databricks.yml  requirements-dev.txt  setup.py
dashboard_processor/: .gitignore  README.md  databricks.yml
fake_data_pipeline/: .gitignore  README.md  databricks.yml
kafka_alerting_pipeline/: .gitignore  KAFKA_SETUP_GUIDE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP_GUIDE.md  databricks.yml  docker-compose.yml  requirements.txt  send_test_data.py  setup-kafka.sh
lakebase-terraform/: .gitignore  .terraform.lock.hcl  README.md  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
mv_dashboard/: README.md  databricks.yml
parameterized_pipeline/: .gitignore  CONFIG_USAGE.md  EXAMPLES.md  QUICK_START.md  README.md  STRUCTURE.md  databricks.yml
(+73 files in other folders)
